fix : fixed the item's pics that could get too big & removed deprecated home.html

--- a/PP2I1/src/frontend/static/css/shop.css
+++ b/PP2I1/src/frontend/static/css/shop.css
@@ -155,6 +155,8 @@ body{
 .itemPic{
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 150px;
+  height:auto;
 }
 
 .itemPrice{
